[package]
name = "audio_maker"
version = "0.1.0"
edition = "2021"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
serde = { version = "1.0.141", features = ["derive"] }
wasm-bindgen = { version = "0.2.63", features = ["serde-serialize"] }
hrtf = "0.8.0"
wav = "1.0.0"
js-sys = "0.3.59"
console_error_panic_hook = "0.1.7"

